deleted unnecessary html and added margin-top to h1

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     
 </head>
 <body style="overflow-x:hidden; background-color: black;">
-    <h1 class="text-center fs-1 mb-5 text-warning">TIC TAC TOE!</h1>
+    <h1 class="text-center fs-1 mt-5 mb-5 text-warning">TIC TAC TOE!</h1>
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -30,7 +30,7 @@
             <div class="col">
 
                 <div class="table-responsive" style="overflow-x:hidden;">
-                    <table class="table">
+                    <table class="table text-center">
                         <tr>
                             <td class="border border-warning border-start-0 border-top-0" id ="cell">
                                 <button cellIndex = "0" class="btn btn-lg btn-dark w-50 m-5"  data-bs-toggle="modal" data-bs-target="#Modal" id="gameBtn">&nbsp;<br>&nbsp;</button>
