--- a/winner.html
+++ b/winner.html
@@ -9,12 +9,9 @@
     <title>CONGRATULATIONS!</title>
 </head>
 <body>
-    <h1 class="youtube-link">O WINS!!</h1>
+    <h1 class="header">O WINS!!</h1>
     
 <canvas id="canvas"></canvas>
-
-
-<a class="youtube-link" href="https://youtu.be/JmWu_eZYH_M" target="_blank"></a>
 
 
 <script src="winner.js"></script>
